data/derived/sp14/progs/unify/prog0001.ml.out
Characters 64-66:
  | h1::h2::t -> h1+h2 sumList t;;
                    ^^
Error: This expression has type int
       This is not a function; it cannot be applied.
